--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css">
   <title>Examen</title>
 </head>
 
 <body>
-  <div id="app"></div>
+  <div>
+    <h1>Todo List</h1>
+    <div>
+      <form> <input type="text" placeholder="Agregar tarea..." /> <button>+</button> </form>
+    </div>
+    <div>
+      <ul></ul>
+    </div>
+    <div>
+      <p>You have no pending tasks.</p>
+    </div>
+    <div> <span>Number of task:</span> <span>0</span></div>
+  </div>
   <script type="module" src="/main.js"></script>
 </body>
 
